--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -16,3 +16,7 @@ jobs:
                   go-version: ${{ matrix.go-version }}
             - name: Display Go version
               run: go version
+            - name: Run tests
+              run: go test -v ./...
+            - name: Run static analysis
+              run: go vet ./...
